Fixes clipping of Ember Times logo
Port of: https://github.com/ember-learn/ember-blog/pull/31

--- a/addon/styles/blog.scss
+++ b/addon/styles/blog.scss
@@ -144,7 +144,7 @@ body {
     background-repeat: no-repeat;
     margin: 0 0 0.7em;
     &.large {
-      background-size: 75%;
+      background-size: contain;
       height: 155px;
       @media screen and (max-width: $small-breakpoint) {
         background-size: 90%;
